k8s/demo-app/np-debug.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: debug
  namespace: demo-app
spec:
  podSelector:
    matchLabels:
      app: frontend
  policyTypes:
    - Ingress
  ingress:
    # allow access from backend
    - from:
        - podSelector:
            matchLabels:
              app: backend
      ports:
        - protocol: TCP
          port: 80
