k8s/demo-app/np-dex.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: dex
spec:
  podSelector:
    matchLabels:
      app: dex-authenticator
  policyTypes:
    - Ingress
    - Egress
  ingress:
    # allow access from ingress
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: d8-ingress-nginx
          podSelector:
            matchLabels:
              app: controller
      ports:
        - protocol: TCP
          port: 443
  egress:
    # allow access to dex
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: d8-user-authn
          podSelector:
            matchLabels:
              app: dex
      ports:
        - protocol: TCP
          port: 5556
